--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,15 @@
 :root {
-  --primary-color: #8b00ff;
-  --font-color: #fff;
+  --primary-color: #4b0082;
+  --primary-accent-color: #8a2be2;
+  --surface-color: #0d0d2f;
   --background-color: #000;
+  --font-color: #f0f0ff;
+
+  --aside-width: 300px;
+  --gap: 10px;
+  --gap2: 20px;
+
+  --font-family: "Luminari", fantasy;
 }
 
 body,
@@ -11,31 +19,13 @@ html {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background-color: var(--background-color);
-  font-family: "Luminari", fantasy;
+
+  font-family: var(--font-family);
+  font-size: 100%;
   color: var(--font-color);
-  text-shadow: 0 0 10px var(--primary-color), 0 0 20px var(--primary-color), 0 0 30px var(--primary-color);
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-}
-
-button {
-  pointer-events: auto;
-  background-color: rgba(139, 0, 255, 0.3);
-  color: var(--font-color);
-  border: 2px solid var(--primary-color);
-  border-radius: 5px;
-  padding: 1vh 2vw;
-  font-size: 1.5vw;
-  font-family: "Luminari", fantasy;
-  transition: all 0.3s ease;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: rgba(139, 0, 255, 0.6);
-  box-shadow: 0 0 20px var(--primary-color);
 }
