--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,11 @@ html {
   font-family: var(--font-family);
   font-size: 100%;
   color: var(--font-color);
+  background-color: var(--background-color);
+}
+
+button {
+  cursor: pointer;
 }
 
 #app {
